k8s/traefik/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: 'letsencrypt-production'
    traefik.ingress.kubernetes.io/router.middlewares: 'kube-system-https-redirect@kubernetescrd,kube-system-basic-auth@kubernetescrd'
spec:
  ingressClassName: traefik
  rules:
    - host: traefik.tryrocket.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik-dashboard
                port:
                  number: 9000
  tls:
    - hosts:
        - traefik.tryrocket.cloud
      secretName: traefik-tryrocket-cloud-production-tls
